--- a/styles.css
+++ b/styles.css
@@ -115,8 +115,8 @@ button {
     font-size: 1.5vw;
     font-weight: bold;
     color: white; 
-    background: linear-gradient(180deg, rgba(254,7,255,1) 7%, rgba(157,11,253,1) 35%, rgba(68,14,252,1) 88%);
-    border-radius: 24px; 
+    background: linear-gradient(180deg, rgba(254,7,255,1) 1%, rgba(157,11,253,1) 25%, rgba(68,14,252,1) 70%);
+    border-radius: 20px; 
     padding: 2% 3%; 
     cursor: pointer; 
     transition: all 2s ease; 
@@ -158,7 +158,7 @@ button:hover {
     background-color: rgb(255, 236, 243);
     overflow: hidden; 
     position: relative;
-    z-index: 1001;
+    z-index: 1;
     padding-top: 5%;
 }
 
@@ -203,12 +203,6 @@ button:hover {
     background-color: rgb(255, 236, 243);
 }
 
-.serviciosTitulo{
-    color: white;
-    font-size: 4vw;
-    font-weight: 400;
-    font-style: italic;
-}
 
 .serviciosColumn{
     display: flex;
@@ -678,11 +672,12 @@ footer h3{
 
 
 @media (max-width: 460px) {
-    body {
+    html {
         overflow-x: hidden;
     }
     header h1{
         font-size: 6vw;
+            padding-top: 3%;
     }
     .firstSection{
         display: none;
@@ -690,73 +685,147 @@ footer h3{
     .firstSectionMobile{
         display: flex;
         flex-direction: column;
-        height: 100vh;
-        padding-right: 5%;
-        padding-left: 5%;
+        height: 150%;
         background-image: url(./images/fondoNegro.png);
         background-size: contain;
         background-attachment: fixed;
         padding-bottom: 5%;
+        display: flex;
+        align-items: center;
     }
     .fondoMacMobile{
         background-image: url(./images/FondoMac.jpeg);
-        background-position: 9% center;
         background-attachment: fixed;
         background-repeat: repeat;
         height: 50vh;
-        width:  75vw;
+        width:  90vw;
         border-radius: 12px;
-        margin-top: 6%;
+        margin-top: 20%;
+
     }
     
     
     .firstTextMobile{
-        text-align: left;
+        text-align: center;
         margin-top: 8%;
-        margin-left: 10%;
     
     }
     .tituloMobile{
-        font-size: 4vw;
+        font-size: 10vw;
+        line-height: 1.5;
         background: linear-gradient(90deg, rgba(68,14,252,1) 17%, rgba(157,11,253,1) 70%, rgba(254,7,255,1) 100%);
         -webkit-background-clip: text;
         background-clip: text;
         -webkit-text-fill-color: transparent;
         font-weight: 700;
         font-style: italic;
-        position: sticky;
-        top: 18%;
         transition: opacity 0.7s ease, visibility 0.3s ease, transform 2s ease;
-        margin-bottom: 4%;
-    }
-    .moveTextMobile{
-        transform: translatey(-80%);
+        margin-bottom: 10%;
+        margin-top: 30%;
     }
     
     
     .subtituloMobile{
-        font-size: 1.7vw;
-        margin-top: 7%;
+        font-size: 6vw;
+        margin-top: 20%;
         font-weight: 300;
         font-style: italic;
         color: white;
         line-height: 1.3;
-        position: sticky;
-        top: 47%;
         transition: opacity 0.7s ease, visibility 0.3s ease;
-    
+        padding-left: 7%;
+        padding-right: 7%;
     }
-    .buttonContainerMobile{
-        display: flex;
-        position: sticky;
-        top: 75%;
-        margin-bottom: 10%;
-    }
+
     .buttonContainerMobile a{
         text-decoration: none;
-        display: flex;
-        width: 100%;
         transition: all 2s ease; 
+    }
+    #buttonMobile{
+        height: 60px;
+        width: 300px;
+        font-size: 6vw;
+        margin-top: 20%;
+    }
+    .image-container {
+        display: flex; 
+        animation: slide 10s linear infinite; 
+        gap: 3%;
+        height: 100%;
+        align-items: center;
+    }
+    .image-slider{
+        height: 20vh;
+    }
+    .servicios{
+        flex-direction: column;
+        height: 100%;
+        padding-bottom: 10%;
+        padding-top: 15%;
+    }
+    .card{
+        width: 90vw;
+        height: 37vh;
+        margin-bottom: 7%;
+    }
+    .cardContent h3{
+        font-size: 7vw;
+    }
+    .cardContent p{
+        font-size: 5vw;
+    }
+    .cardContent img{
+        height: 30%;
+    }
+    .seccionNiveles{
+        height: 280vh;
+        text-align: center;
+        position: relative;
+        padding-top: 20%;
+    }
+    
+    .textoElevar{
+        color: white;
+        font-size: 10vw;
+        line-height: 1.5;
+        margin-bottom: 20%;
+    }
+    .textoElevar span{
+        background: linear-gradient(90deg, rgba(68,14,252,1) 17%, rgba(157,11,253,1) 70%, rgba(254,7,255,1) 100%);
+        -webkit-background-clip: text;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-size: 10vw;
+        
+    }
+    .textoContainer{
+        position: sticky;
+        top: 15%;
+    }
+    
+    .nivelesContainer{
+    
+        position: sticky;
+        top: 28%;
+    }
+    .niveles{
+        position: absolute;
+        top: 0;
+        left: 0%;
+        padding-left: 10%;
+        padding-right: 10%;
+        transition: opacity 0.5s ease-in-out;
+    }
+    .niveles h3{
+        margin-top: 10%;
+        font-size: 10vw;
+        color: white;
+        margin-bottom: 20%;
+    }
+    .niveles p{
+        margin-top: 5%;
+        font-size: 7vw;
+        color: white;
     }
 }
 
