--- a/styles.css
+++ b/styles.css
@@ -699,6 +699,10 @@ footer h3{
         line-height: 1.3;
         margin-top: 10%;
     }
+    .subtitulo2{
+        color: white;
+        text-shadow: none;
+    }
     .buttonContainer{
         display: flex;
         width: 80vw;
