--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ header img{
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1440' height='1015' viewBox='0 0 1440 1015' fill='none'%3E%3Cpath d='M268 263.5C112.5 263.5 26.5 430.5 -13.5 412.5V710.5V1029.5H1452.5V0.5C1422.67 43.8333 1397.18 51.6577 1322.5 89C1243.5 128.5 1243.5 217 1127 231C990.979 247.346 1038 163.5 887 163.5C736 163.5 701.714 244.598 577.5 275.5C475 301 423.5 263.5 268 263.5Z' fill='%23fff6ec'/%3E%3C/svg%3E");
     background-size: cover;
     background-attachment: fixed;
-    padding-top: 5%;
+    padding-top: 2%;
     background-color: #141414;
 }
 .fondoMac{
@@ -77,6 +77,7 @@ header img{
     margin-top: 7%;
     margin-left: 1%;
     margin-right: 4%;
+    animation-duration: 3s;
 }
 .titulo{
     font-size: 5.5vw;
@@ -779,12 +780,12 @@ footer h3{
     }
     .textoContainer{
         position: sticky;
-        top: 20%;
+        top: 15%;
     }
     
     .nivelesContainer{
         position: sticky;
-        top: 50%;
+        top: 45%;
     }
     .niveles{
         position: absolute;
