--- a/styles.css
+++ b/styles.css
@@ -138,22 +138,36 @@ header img{
     flex-direction: column;
     padding-top: 7%;
     background-color: #ffffff;
+    background-image: url(./images/FondoCurvas.png);
+    background-size: cover;
+    background-position: center;
 }
 .servicios h2{
     font-size: 6vw;
     position: sticky;
     top: 10%;
     color: #440ea7;
-    margin-bottom: 10%;
+    margin-bottom: 20%;
     margin-left: 10%;
+    text-shadow: 
+    -1px -1px 0 rgb(255, 255, 255),
+    1px -1px 0 rgb(255, 255, 255),
+    -1px  1px 0 rgb(255, 255, 255),
+    1px  1px 0 rgb(255, 255, 255);
 }
 .textoServicios{
     font-size: 2vw;
-    margin-top: -10%;
-    margin-bottom: 7%;
+    font-weight: 600;
+    margin-top: -20%;
+    margin-bottom: 15%;
     position: sticky;
-    top: 22%;
+    top: 23%;
     margin-left: 10%;
+    text-shadow: 
+    -1px -1px 0 rgb(255, 255, 255),
+    1px -1px 0 rgb(255, 255, 255),
+    -1px  1px 0 rgb(255, 255, 255),
+    1px  1px 0 rgb(255, 255, 255);
 }
 
 .serviciosColumn{
@@ -320,7 +334,6 @@ header img{
 .image-slider {
     width: 100%; 
     height: 30vh; 
-    background-color: #ffffff;
     overflow: hidden; 
     position: relative;
     z-index: 1;
